--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,8 +38,8 @@ const { title } = Astro.props;
         </a>
         <ul class="nav-links">
           <li><a href="/" class="nav-link">Etusivu</a></li>
-          <li><a href="/" class="nav-link">Case Studies</a></li>
-          <li><a href="/" class="nav-link">Tietoja</a></li>
+          <li><a href="case-studies-page" class="nav-link">Case Studies</a></li>
+          <li><a href="about-page" class="nav-link">Tietoja</a></li>
         </ul>
       </nav>
     </header>
